# country_picker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/country_picker/: __init__.py  __main__.py  app.py  cli.py  gui.py
src/country_picker/resources/: MainWindow.ui
tests/: test_json_parsing.py
